# omgserver

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Session.vim  cmake_install.cmake  cscope.files  cscope.in.out  cscope.out  cscope.po.out  svn-commit.tmp
Debug/: makefile  sources.mk  subdir.mk
chat_server/: CChannel.cpp  CChannel.h  CChatMsgDispatcher.cpp  CChatMsgDispatcher.h  CChatWorld.cpp  CChatWorld.h  CChater.cpp  CChater.h  CMakeLists.txt  IChannel.h  IChater.h  Message.h  chat_server.xml  chat_server_define.h  main.cpp
client/: CMakeCache.txt  CMakeLists.txt  Makefile  TestJob.h  a.out  client  cmake_install.cmake  main.cpp  tags
client/objs/common/: Makefile  cmake_install.cmake
client/objs/net/: Makefile  cmake_install.cmake
common/: CEventThread.cpp  CEventThread.h  CMakeLists.txt  CPoolThread.cpp  CPoolThread.h  CThread.cpp  CThread.h  CThreadManage.cpp  CThreadManage.h  CTimerEventHandler.cpp  CTimerEventHandler.h  IJob.cpp  IJob.h  IMsgProcess.h  JobDequeue.cpp  JobDequeue.h  MD5.cpp  MD5.h  Makefile  Timer.h  buffer.h  circular_buffer.cpp  circular_buffer.h  cmake_install.cmake  cmmmo_define.h  daemon.h  head.h  lock.h  mtrand.h  object_pool.h  objectfactory.h  omg_type.h  queue.h  rand_generator.h  server_application.cpp  server_application.h  singleton.cpp  singleton.h  string.h  system_util.cpp  (+4 more)
db_server/: CDBMsgDispatcher.cpp  CDBMsgDispatcher.h  CDBTaskManage.h  CDBhandlerJob.cpp  CDBhandlerJob.h  CMakeCache.txt  CMakeLists.txt  CNpcPlayerCache.cpp  CNpcPlayerCache.h  CServerManage.cpp  CServerManage.h  CWorldEventHandler.cpp  CWorldEventHandler.h  DBAccepter.cpp  DBAccepter.h  DBConnectionPool.cpp  DBConnectionPool.h  Makefile  cmake_install.cmake  db_server  dbmsg_process.cpp  dbmsg_process.h  main.cpp  svn-commit.tmp  tags
game_exe/: db_error20131124-155751.27337  db_error20131125-210521.5263  db_info20131124-155523.27169  db_info20131124-162144.29930  db_info20131125-210518.5263  db_server.ERROR  db_server.INFO  edog.cpp  game_error20131124-160047.27706  game_error20131124-162204.29991  game_error20131125-210526.5296  game_info20131124-160047.27706  game_info20131124-162204.29991  game_info20131125-210521.5296  game_server.ERROR  game_server.INFO  gate_info_20131125-210518.5261  gate_server.INFO  start_server  stop_server
game_server/: CGameMatchHandler.h  CGameMsgDispatcher.cpp  CGameMsgDispatcher.h  CGameTimerEventHandler.cpp  CGameTimerEventHandler.h  CMatchManager.cpp  CMatchManager.h  CMatchTaskManage.cpp  CMatchTaskManage.h  ConnectDBServerJob.h  ConnectToGateJob.cpp  ConnectToGateJob.h  Event.h  GameConfigManage.cpp  GameConfigManage.h  GateConManager.cpp  GateConManager.h  GateSSocketListenerThread.cpp  GateSSocketListenerThread.h  MatchProcessThread.cpp  MatchProcessThread.h  RunMatchJob.cpp  RunMatchJob.h  SocketRecvJob.h  SocketSendJob.h  ball_keyframe.cpp  ball_keyframe.h  common_func.h  init_move_define.cpp  main.cpp  match.cpp  match.h  match_engine_events.h  match_recorder.cpp  match_recorder.h  msg.h  player_keyframe.h  rand_generator.cpp
gate_server/: CAllServerManage.cpp  CAllServerManage.h  CArenaManage.cpp  CArenaManage.h  CGameMsgRecv.cpp  CGameMsgRecv.h  CGateTimerEventHandler.cpp  CGateTimerEventHandler.h  CMsgDispatcher.cpp  CMsgDispatcher.h  GServer.h  GateClientMsg.h  GateGameMsg.h  GateUserManager.cpp  GateUserManager.h  GateWayPlayer.cpp  GateWayPlayer.h  SSocketListenAdapter.cpp  SSocketListenAdapter.h  client_acceptor.h  gate_application.cpp  gate_server.cpp  gate_server.h  main.cpp  role.cpp  role.h  server_conns.cpp  server_conns.h  tags
libforcentos/: libgflags.so.0  libgflags_nothreads.so.0.1.0  libglog.so.0  libmysqlclient.so.16  libmysqlpp.so.3
libforqq/: libgflags.so.0.1.0  libgflags_nothreads.so.0.1.0  libglog.so.0.0.0  libxml2.so.2
libforubuntu/: libboost_serialization.so.1.42.0  libboost_wserialization.so.1.42.0  libgflags.so.0  libgflags.so.0.1.0  libgflags_nothreads.so.0  libgflags_nothreads.so.0.1.0  libglog.so.0.0.0  libz.so.1.2.6
master_server/: CMakeLists.txt
message/: CMakeLists.txt  Makefile  makefile  message.pb.cc  message.pb.h  message.proto  message_define.h
net/: CMakeCache.txt  CMakeLists.txt  IConnection.h  IMsgDispatcher.h  Makefile  client_socket.cpp  client_socket.h  cmake_install.cmake  define.h  epoll_accepter.h  epoll_handler.cpp  epoll_handler.h  epoll_socket.h  game_packet.cpp  game_packet.h  message.pb.cc  message.pb.h  msg.h  net_util.cpp  net_util.h  omg_timer.h  packet.h  packet_message.h  serversocket.cpp  serversocket.h  socket_epoll.cpp  socket_epoll.h  socketclient.cpp  socketclient.h  test.h  thread.cpp  thread.h
orm/: .role_info.cpp.swp  CMakeLists.txt  Makefile  makefile  role_info.h  sql_binder.h
security_server/: CMakeCache.txt  CMakeLists.txt  FlexSecurityBox.h  Makefile  a.out  cmake_install.cmake  main.cpp  serurity_server  server.xml
security_server/objs/common/: Makefile  cmake_install.cmake
security_server/objs/net/: Makefile  cmake_install.cmake
soccer_ai/: CMakeCache.txt  CMakeLists.txt  Makefile  action_define.cpp  action_define.h  attack_order.h  calc_direction.h  cmake_install.cmake  def.h  entity_manager.cpp  entity_manager.h  enum.h  event_define.h  game_config.h  game_entity.h  match_text.h  (+37 more)
ut/: CMakeLists.txt  a.out  main.cpp
(+37 files in other folders)
