#cmake_minimum_required(VERSION 2.8)
#cmake_policy(SET CMP0015 OLD)
OPTION(LINK_CENTOS_LIB "using CentOs Lib" OFF)

PROJECT (chat_server)
MESSAGE(STATUS "building chat_server"${chat_server_BINARY_DIR})
SET(CMAKE_BUILD_TYPE DEBUG)
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
AUX_SOURCE_DIRECTORY(./ DIR_SRCS)
ADD_SUBDIRECTORY(../net objs/net) 
ADD_SUBDIRECTORY(../common objs/common)
 
LINK_DIRECTORIES(/usr/local/lib)
IF(LINK_CENTOS_LIB)
	LINK_DIRECTORIES(../libforcentos)
	MESSAGE("Linking CentOs libs")
ELSE(LINK_CENTOS_LIB)
	LINK_DIRECTORIES(../lib)
	MESSAGE("Linking Ubuntu libs")
ENDIF(LINK_CENTOS_LIB)
ADD_EXECUTABLE(chat_server ${DIR_SRCS})
ADD_DEPENDENCIES(chat_server net common)
TARGET_LINK_LIBRARIES(chat_server net common libgflags.so libglog.so libtinyxml.a)

