cmake_minimum_required(VERSION 2.8)
cmake_policy(SET CMP0015 OLD)
PROJECT (client)
MESSAGE(STATUS "building client"${client_BINARY_DIR})
SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
INCLUDE_DIRECTORIES(../include)
AUX_SOURCE_DIRECTORY(./ DIR_SRCS)
ADD_SUBDIRECTORY(../net objs/net) 
ADD_SUBDIRECTORY(../common objs/common)
 
LINK_DIRECTORIES(/usr/local/lib ../lib)
#LINK_DIRECTORIES(../lib)
ADD_EXECUTABLE(client ${DIR_SRCS})
ADD_DEPENDENCIES(client net common)
TARGET_LINK_LIBRARIES(client net common pthread libgflags.so libglog.so libtinyxml.a)
