cmake_minimum_required(VERSION 2.8)
cmake_policy(SET CMP0015 OLD)
PROJECT (ut)
MESSAGE(STATUS "building util test"${game_server_BINARY_DIR})
SET(CMAKE_BUILD_TYPE DEBUG)

SET(CMAKE_CXX_FLAGS_DEBUG "-g -Wall -g")
#SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g")
#SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
INCLUDE_DIRECTORIES(../include)
AUX_SOURCE_DIRECTORY(./ DIR_SRCS)
ADD_SUBDIRECTORY(../net objs/net) 
ADD_SUBDIRECTORY(../common objs/common)
 
LINK_DIRECTORIES(/usr/local/lib ../lib)
#LINK_DIRECTORIES(../lib)
ADD_EXECUTABLE(test ${DIR_SRCS})
ADD_DEPENDENCIES(test net common)
TARGET_LINK_LIBRARIES(test net common libgflags.so libglog.so libtinyxml.a xml2 libz.so)
